# AI_MORPION_LEARNING_REINFORCEMENT

./: CMakeLists.txt
IA_part/: IA_Qlearning.cpp  IA_Qlearning.h  main_training.cpp
morpion_base/: main_game.cpp  tab_morpion.cpp  tab_morpion.h
